--- a/imgproject/ind.html
+++ b/imgproject/ind.html
@@ -20,26 +20,14 @@
     
 </body>
 <script>
-    let img = document.getElementById("image");
-let height = 10;
-let width = 10;
+    const img = document.getElementById("image");
+let size = 10;
 let flag = true;
 setInterval(() => {
-  if (flag && height <= 100) {
-    height += 10;
-    width += 10;
-    if (height == 100) {
-      flag = false;
-    }
-  } else {
-    height -= 10;
-    width -= 10;
-    if (height == 0) {
-      flag = true;
-    }
-  }
-  img.style.height = `${height}%`
-  img.style.width = `${width}%`;
+  size = flag ? Math.min(size + 10, 100) : Math.max(size - 10, 0);
+  flag = size === 100 ? false : size === 0 ? true : flag;
+  img.style.height = `${size}%`;
+  img.style.width = `${size}%`;
 }, 1000);
 </script>
 </html>
